<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.teamnovus.automessage</groupId>
	<artifactId>AutoMessage</artifactId>
	<name>AutoMessage</name>
	<version>2.6</version>
	<url>http://www.novuscraft.org</url>

	<build>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>true</filtering>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
